# molprivacy

./: README.md  pyproject.toml
scripts_paper/model_performance/: create_figure.py
scripts_paper/privacy/: figure_example_attack.py  figure_overlap_attacks.py  figure_roc_curve.py  figure_tpr_at_fixed_FPR.py  table_label_distribution.py
scripts_paper/privacy/extra_supplement_figures/: molecule_sizes.py  overlap_representations.py  tpr_minority_class.py
scripts_paper/privacy/statistical_test_supporting_claims/: graph_is_best.py  rmia_better_lira.py
src/leakpro/: __main__.py  config.py  model.py
src/leakpro/attacks/: attack_scheduler.py
src/leakpro/metrics/: attack_result.py
src/leakpro/reporting/: utils.py
src/leakpro/signals/: signal.py
src/leakpro/user_inputs/: abstract_input_handler.py  moreno_input_handler.py
src/leakpro/utils/: extract_true_positives.py  input_handler.py
src/moreno/: __main__.py  cli.py  config.py  custom_representation.py
src/moreno/data/: ames.csv
src/moreno/data_modules/: custom_datamodule.py  datasets_and_collate_functions.py  download_and_clean_data.py  preinstalled_datamodule.py  user_datamodule.py
src/moreno/factories/: datasets.py  models.py
src/moreno/hyperparameter_optimizers/: CNN_optimizer.py  MLP_optimizer.py  MPNN_optimizer.py  optimizer.py
src/moreno/models/: CNN.py  MLP.py  MPNN.py
src/moreno/utils/: clean_data.py  convert_representations.py  plot_roc.py  predict.py
src/moreno_encoders/: __main__.py
src/moreno_encoders/datamodules/: seq2seq.py
src/privacytest/: __main__.py
(+14 files in other folders)
