[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molprivacy"
version = "0.1.0"
requires-python = ">=3.12"
authors = [{ name = "Fabian Krueger", email = "fabian.kruger@astrazeneca.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "chemprop==1.6.1",
    "joblib==1.4.2",
    "lightning==2.4.0",
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "optuna==3.6.1",
    "optuna-integration==4.0.0",
    "pandas==2.2.3",
    "PyYAML==6.0.2",
    "rdkit==2024.3.2",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "torch==2.4.0",
    "tqdm==4.66.5",
]

[project.scripts]
privacytest = "privacytest.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/privacytest", "src/moreno", "src/moreno_encoders", "src/leakpro"]
